--- a/html/index.html
+++ b/html/index.html
@@ -47,7 +47,7 @@
     <div class="container">
         <div class="row">
             <!-- side bar -->
-            <aside class="col-3 menu">
+            <aside class="col-3 menu position-relative">
                 <a href="main-screen.html" class="menu-main-screen d-flex justify-content-between">
                     <div class="text-main">
                         <p class="text-main-1 mb-0">Màn hình chính</p>
@@ -68,9 +68,9 @@
                         <ion-icon class="button-text-service" name="chevron-forward-outline"></ion-icon>
                     </div>
                 </a>
+                <div class="divider-vertical px-0"></div>
             </aside>
 
-            <div class="divider-vertical"></div>
             
             <!-- display -->
             <main class="col-9 display-container">
