--- a/html/index.html
+++ b/html/index.html
@@ -44,7 +44,7 @@
         </div>
     </header> 
 
-    <div class="container">
+    <div class="container-fluid">
         <div class="row">
             <!-- side bar -->
             <aside class="col-3 menu position-relative">
