update main-screen , service-configuration create news-management

--- a/html/index.html
+++ b/html/index.html
@@ -48,7 +48,7 @@
         <div class="row">
             <!-- side bar -->
             <aside class="col-3 menu position-relative">
-                <a href="main-screen.html" class="menu-main-screen d-flex justify-content-between">
+                <a href="main-screen.html" class="menu-main-screen d-flex justify-content-between mb-3">
                     <div class="text-main">
                         <p class="text-main-1 mb-0">Màn hình chính</p>
                         <p class="text-main-2 mb-0">Danh sách hàng đợi chờ xử lý</p>
@@ -57,7 +57,7 @@
                         <ion-icon class="button-text-main" name="chevron-forward-outline"></ion-icon>
                     </div>
                 </a>
-                <a href="service-configuration.html" class="menu-service-configuration d-flex justify-content-between">
+                <a href="service-configuration.html" class="menu-service-configuration d-flex justify-content-between mb-3">
                     <div class="text-service">
                         <p class="text-service-1 mb-0">Cấu hình dịch vụ</p>
                         <p class="text-service-2 mb-0">
@@ -67,6 +67,17 @@
                     <div class="icon-wrapper">
                         <ion-icon class="button-text-service" name="chevron-forward-outline"></ion-icon>
                     </div>
+                </a>
+                <a href="news-management.html" class="menu-news-management d-flex justify-content-between mb-3">
+                    <div class="text-news">
+                        <p class="text-news-1 mb-0">Quản lý tin tức</p>
+                        <p class="text-news-2 mb-0">
+                            Tin tức hiển thị trên trang chủ
+                        </p>
+                    </div>
+                    <div class="icon-wrapper">
+                        <ion-icon class="button-text-news" name="chevron-forward-outline"></ion-icon>
+                    </div>  
                 </a>
                 <div class="divider-vertical px-0"></div>
             </aside>
