--- a/html/news-management.html
+++ b/html/news-management.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="vi">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cấu hình dịch vụ - Hệ thống đăng kí dịch vụ một cửa SOSR</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
     <link rel="stylesheet" href="../css/index.css">
     <link rel="stylesheet" href="../css/responsive.css">
+    <link rel="stylesheet" href="../css/news-management.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-    <script src="../js/router.js"></script>
-    <script src="../js/service-configuration.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
 </head>
+
 <body>
 
     <header class="header bg-light">
@@ -28,8 +30,9 @@
                         <span class="address">PHƯỜNG QUANG TRUNG - TỈNH NGHỆ AN</span>
                     </div>
                 </div>
-    
-                <div class="header-right col-12 col-lg-6 d-flex justify-content-md-end justify-content-center align-items-center gap-3">
+
+                <div
+                    class="header-right col-12 col-lg-6 d-flex justify-content-md-end justify-content-center align-items-center gap-3">
                     <button class="btn logout-btn">Thoát</button>
                     <div class="user-info d-flex flex-column align-items-center text-center">
                         <div class="user-avatar-wrapper mb-1">
@@ -40,13 +43,13 @@
                 </div>
             </div>
         </div>
-    </header>    
+    </header>
 
     <div class="container-fluid">
         <div class="row main-layout">
             <!-- side bar -->
             <aside class="col-2 menu position-relative">
-                <a href="main-screen.html" class="menu-main-screen d-flex justify-content-between">
+                <a href="main-screen.html" class="menu-main-screen d-flex justify-content-between mb-3">
                     <div class="text-main">
                         <p class="text-main-1 mb-0">Màn hình chính</p>
                         <p class="text-main-2 mb-0">Danh sách hàng đợi chờ xử lý</p>
@@ -55,7 +58,8 @@
                         <ion-icon class="button-text-main" name="chevron-forward-outline"></ion-icon>
                     </div>
                 </a>
-                <a href="service-configuration.html" class="menu-service-configuration d-flex justify-content-between">
+                <a href="service-configuration.html"
+                    class="menu-service-configuration d-flex justify-content-between mb-3">
                     <div class="text-service">
                         <p class="text-service-1 mb-0">Cấu hình dịch vụ</p>
                         <p class="text-service-2 mb-0">
@@ -66,96 +70,174 @@
                         <ion-icon class="button-text-service" name="chevron-forward-outline"></ion-icon>
                     </div>
                 </a>
-                <div class="divider-vertical p-0"></div>
+                <a href="news-management.html" class="menu-news-management d-flex justify-content-between mb-3">
+                    <div class="text-news">
+                        <p class="text-news-1 mb-0">Quản lý tin tức</p>
+                        <p class="text-news-2 mb-0">
+                            Tin tức hiển thị trên trang chủ
+                        </p>
+                    </div>
+                    <div class="icon-wrapper">
+                        <ion-icon class="button-text-news" name="chevron-forward-outline"></ion-icon>
+                    </div>
+                </a>
+                <div class="divider-vertical px-0"></div>
             </aside>
-            
+
             <!-- display -->
             <main class="col-10 display-container">
-                <div class="container-service-configuration show">
-                    <div class="header-service d-flex justify-content-between align-items-center">
-                        <p class="mb-0">Cấu hình dịch vụ</p>
+                <div class="container-news-management show">
+                    <div class="header-news d-flex justify-content-between align-items-center">
+                        <p class="mb-0">Quản lý tin tức</p>
                         <button class="btn">Thêm mới</button>
                     </div>
-                    <!-- <hr> -->
-                    <div class="content-service d-flex">
-                        <div class="service col-5">
-                            <div class="row">
-                                <div class="col-5">
-                                    <div class="box-service text-center">
-                                        <img  src="/image/service1.png" alt="logo">
-                                        <p class="mb-0">Tạm trú tạm vắng</p>
-                                    </div>
-                                    <div class="box-service text-center">
-                                        <img  src="/image/service3.png" alt="logo">
-                                        <p class="mb-0">Khai sinh</p>
-                                    </div>
-                                    <div class="box-service text-center">
-                                        <img  src="/image/service5.png" alt="logo">
-                                        <p class="mb-0">Hỏi đáp pháp luật</p>
-                                    </div>
-                                </div>
-                                <div class="col-5">
-                                    <div class="box-service text-center">
-                                        <img  src="/image/service2.png" alt="logo">
-                                        <p class="mb-0">Hồ sơ nhà đất</p>
-                                    </div>
-                                    <div class="box-service text-center">
-                                        <img  src="/image/service4.png" alt="logo">
-                                        <p class="mb-0">Khai tử </p>
-                                    </div>
-                                    <div class="box-service text-center">
-                                        <img  src="/image/service6.png" alt="logo">
-                                        <p class="mb-0">Hướng dẫn</p>
+
+                    <div class="container">
+                        <div class="row mt-4">
+                            <!-- list -->
+                            <div class="list-news col-md-4 position-relative px-3 d-flex flex-column">
+                                <!-- news -->
+                                <div id="list-news-container">
+                                    <div class="card-news d-flex mb-3 d-none" id="news-template">
+                                        <img src="" class="img-fluid" alt="Tin tức">
+                                        <div class="card-body">
+                                            <p class="card-text-1 mb-2"></p>
+                                            <div class="d-flex justify-content-between align-items-center">
+                                                <span class="card-text-2"></span>
+                                                <input class="news-checkbox" type="checkbox">
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
+
+                                <div class="footer-news mt-auto mb-1 d-flex justify-content-between flex-lg-wrap">
+                                    <!-- filter the news -->
+                                    <div class="footer-choose-news mt-1 mb-1 ms-1">
+                                        <p id="footer-selected-news" class="mb-0">Chọn nhóm tin</p>
+                                        <div class="dropdown-footer ms-auto dropup">
+                                            <a class="btn btn-outline-secondary dropdown-toggle p-2 d-flex align-items-center"
+                                                href="#" role="button" id="dropdownMenuButton" data-bs-toggle="dropdown"
+                                                aria-expanded="false">
+                                                <ion-icon name="chevron-down-outline" id="dropdown-icon"></ion-icon>
+                                            </a>
+                                            <ul class="dropdown-menu" id="dropdown-list-footer"
+                                                aria-labelledby="dropdownMenuButton">
+                                                <li><a class="dropdown-item" href="#" data-group="all">Tất cả</a></li>
+                                                <li><a class="dropdown-item" href="#" data-group="1">Nhóm tin 1</a></li>
+                                                <li><a class="dropdown-item" href="#" data-group="2">Nhóm tin 2</a></li>
+                                                <li><a class="dropdown-item" href="#" data-group="3">Nhóm tin 3</a></li>
+                                                <li><a class="dropdown-item" href="#" data-group="4">Nhóm tin 4</a></li>
+                                                <li><a class="dropdown-item" href="#" data-group="5">Nhóm tin 5</a></li>
+                                                <li><a class="dropdown-item" href="#" data-group="6">Nhóm tin 6</a></li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                    <!-- pagination -->
+                                    <div class="mt-1">
+                                        <ul class="pagination"  id="pagination">
+                                            <li class="page-item" id="prev-button">
+                                                <a class="page-link" href="#"> <i class="bi bi-chevron-left"></i> </a>
+                                            </li>
+                                            <li class="page-item" id="page-1">
+                                                <a class="page-link" href="#">1</a>
+                                            </li>
+                                            <li class="page-item dots" id="dots" data-page="">
+                                                <span class="page-link">…</span>
+                                            </li>
+                                            <li class="page-item" id="page-last">
+                                                <a class="page-link" href="#">1</a>
+                                            </li>
+                                            <li class="page-item" id="next-button">
+                                                <a class="page-link" href="#"> <i class="bi bi-chevron-right"></i> </a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+
+                                <div class="divider-line"></div>
+                            </div>
+
+
+                            <!-- Display content -->
+                            <div class="col-md-8 display-news px-4">
+                                <form action="">
+                                    <div class="select-image-news d-flex align-items-center">
+                                        <img id="selected-image-news" src="/image/cam.png" alt="logo">
+                                        <input type="file" id="file-input" style="display: none;">
+                                        <a id="choose-image-btn-news">Chọn ảnh bài viết</a>
+                                    </div>
+                                    <div class="news-name mt-3">
+                                        <label class="mb-2">Tiêu đề:</label>
+                                        <input type="text" class="form-control">
+                                    </div>
+                                    <div class="mt-3">
+                                        <label for="choose-news" class="mb-2">Chọn nhóm tin:</label>
+                                        <div class="choose-news">
+                                            <p id="selected-news" class="mb-0"></p>
+                                            <div class="dropdown ms-auto">
+                                                <a class="btn btn-outline-secondary dropdown-toggle p-2 d-flex align-items-center"
+                                                    href="#" role="button" id="dropdownMenuButton"
+                                                    data-bs-toggle="dropdown" aria-expanded="false">
+                                                    <ion-icon name="chevron-down-outline" id="dropdown-icon"></ion-icon>
+                                                </a>
+                                                <ul class="dropdown-menu" id="dropdown-list"
+                                                    aria-labelledby="dropdownMenuButton">
+                                                    <li><a class="dropdown-item" href="#">Nhóm tin 1</a></li>
+                                                    <li><a class="dropdown-item" href="#">Nhóm tin 2</a></li>
+                                                    <li><a class="dropdown-item" href="#">Nhóm tin 3</a></li>
+                                                    <li><a class="dropdown-item" href="#">Nhóm tin 4</a></li>
+                                                    <li><a class="dropdown-item" href="#">Nhóm tin 5</a></li>
+                                                    <li><a class="dropdown-item" href="#">Nhóm tin 6</a></li>
+                                                </ul>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="service-news mt-3">
+                                        <p class="mb-2">Mô tả dịch vụ:</p>
+                                        <textarea class="form-control" name="service-news" id=""></textarea>
+                                    </div>
+                                    <div class="mt-3">
+                                        <label for="editor" class="form-label fw-medium">Nội dung chi tiết:</label>
+                                        <div id="editor" class="quill-editor"></div>
+                                    </div>
+                                    <div class="publish-articles d-flex align-items-center mt-3">
+                                        <input type="checkbox" class="ms-2">
+                                        <label style="color: #4F4F4F;" for="" class="ms-3">Xuất bản bài viết</label>
+                                    </div>
+                                    <div class="button-news d-flex justify-content-end">
+                                        <a class="btn cancel-news me-2">Hủy</a>
+                                        <button type="button" class="btn save-news"
+                                            onclick="showToast('Thao tác thành công!', 'success')">Lưu lại</button>
+                                    </div>
+                                </form>
                             </div>
                         </div>
-
-                        <div class="vertical-line-service"></div>
-
-                        <div class="display-service col-5">
-                            <form action="">
-                                <div class="select-image-service d-flex align-items-center">
-                                    <img id="selected-image" src="/image/cam.png" alt="logo">
-                                    <input type="file" id="file-input" style="display: none;">
-                                    <a id="choose-image-btn">Chọn ảnh</a>
-                                </div>
-                                <div class="service-name">
-                                    <p>Tên dịch vụ:</p>
-                                    <input type="text" class="form-control">
-                                </div>
-                                <div class="service-description">
-                                    <p>Mô tả dịch vụ:</p>
-                                    <textarea class="form-control" name="service-description" id=""></textarea>
-                                </div>
-                                <div class="process-time">
-                                    <p>Thời gian xử lý một hồ sơ:</p>
-                                    <div class="d-flex align-items-center">
-                                        <input class="form-control hour-service" type="text">
-                                        <label class="ms-2" style="color: #919191;" for="hour">giờ</label>
-                                        <input class="form-control minutes-service ms-2" type="text">
-                                        <label class="ms-2" style="color: #919191;" for="minutes">phút</label>
-                                        <input class="undetermined-service ms-2" type="checkbox">
-                                        <label class="ms-2" style="color: #4F4F4F;" for="undetermined">Không xác định</label>
-                                    </div>
-                                </div>
-                                <div class="off-service d-flex align-items-center">
-                                    <input type="checkbox" class="ms-2">
-                                    <label style="color: #4F4F4F;" for="off-service" class="ms-2">Tắt dịch vụ này</label>
-                                </div>
-                                <div class="button-service d-flex justify-content-end">
-                                    <a class="btn cancel-service me-2">Hủy</a>
-                                    <button class="btn save-service">Lưu lại</button>
-                                </div>
-                            </form>
-                        </div>
                     </div>
+
                 </div>
             </main>
+        </div>
+    </div>
+    <!-- Toast Container -->
+    <div class="position-fixed bottom-0 end-0 p-3 toast-wrapper" style="z-index: 1055">
+        <div id="customToast" class="toast toast-animated align-items-center text-white bg-success border-0"
+            role="alert" aria-live="assertive" aria-atomic="true">
+            <div class="d-flex align-items-center w-100">
+                <i class="toast-icon me-2"></i>
+                <div class="toast-body">Thông báo!</div>
+                <button type="button" class="btn-close btn-close-white ms-auto align-self-start" data-bs-dismiss="toast"
+                    aria-label="Đóng"></button>
+            </div>
         </div>
     </div>
 
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.quilljs.com/1.3.6/quill.min.js"></script>
+    <script src="../js/router.js"></script>
+    <script src="../js/news-management.js"></script>
 </body>
-</html> 
+
+</html>
