--- a/html/user-history.html
+++ b/html/user-history.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="../css/index.css" />
     <link rel="stylesheet" href="../css/responsive.css" />
     <link rel="stylesheet" href="../css/user-history.css" />
+    <link rel="stylesheet" href="../css/modal.css" />
 </head>
 
 <body>
@@ -155,7 +156,28 @@
                                 </div>
                                 <div class="line-content"></div>
                                 <div class="d-flex align-items-center" style="flex: 3;overflow: hidden;">
-                                    <p class="detail-content mx-5 ms-5">[{citizenName: Trần Minh A, ZaloId: 0934234...}]
+                                    <p class="detail-content mx-5 ms-5">[{citizenName: Trần Minh A, ZaloId: 0934234234, action: “edit service”, createdDate: “22/04/2025 10:05:24”24, updatedDate: “22/04/2025 10:05:24”},{citizenName: Trần Minh A, ZaloId: 0934234234, action: “edit service”, createdDate: “22/04/2025 10:05:24”24, updatedDate: “22/04/2025 10:05:24”},{citizenName: Trần Minh A, ZaloId: 0934234234, action: “edit service”, createdDate: “22/04/2025 10:05:24”24, updatedDate: “22/04/2025 10:05:24”},{citizenName: Trần Minh A, ZaloId: 0934234234, action: “edit service”, createdDate: “22/04/2025 10:05:24”24, updatedDate: “22/04/2025 10:05:24”},{citizenName: Trần Minh A, ZaloId: 0934234234, action: “edit service”, createdDate: “22/04/2025 10:05:24”24, updatedDate: “22/04/2025 10:05:24”},{citizenName: Trần Minh A, ZaloId: 0934234234, action: “edit service”, createdDate: “22/04/2025 10:05:24”24, updatedDate: “22/04/2025 10:05:24”},{citizenName: Trần Minh A, ZaloId: 0934234234, action: “edit service”, createdDate: “22/04/2025 10:05:24”24, updatedDate: “22/04/2025 10:05:24”},{citizenName: Trần Minh A, ZaloId: 0934234234, action: “edit service”, createdDate: “22/04/2025 10:05:24”24, updatedDate: “22/04/2025 10:05:24”},{citizenName: Trần Minh A, ZaloId: 0934234234, action: “edit service”, createdDate: “22/04/2025 10:05:24”24, updatedDate: “22/04/2025 10:05:24”},{citizenName: Trần Minh A, ZaloId: 0934234234, action: “edit service”, createdDate: “22/04/2025 10:05:24”24, updatedDate: “22/04/2025 10:05:24”}]
+                                    </p>
+                                </div>
+                                <div class="line-content"></div>
+                                <div class="d-flex flex-column justify-content-center align-items-center"
+                                    style="flex:1.5;">
+                                    <p>21/04/2025</p>
+                                    <p>08:10:12</p>
+                                </div>
+                            </div>
+                            <div class="d-flex mt-4 section-dislay-content">
+                                <div class="d-flex align-items-center justify-content-center gap-3" style="flex:1.5;">
+                                    <input type="checkbox" id="select-user">
+                                    <label for="">Nguyễn Văn B jashdkj jbckjans qiuwe </label>
+                                </div>
+                                <div class="line-content"></div>
+                                <div class="d-flex align-items-center " style="flex: 2;justify-content: start;">
+                                    <p style="color: #919191;font-weight: 400;" class="ms-5">Màn hình chính </p>
+                                </div>
+                                <div class="line-content"></div>
+                                <div class="d-flex align-items-center" style="flex: 3;overflow: hidden;">
+                                    <p class="detail-content mx-5 ms-5">{username: anh.nv@gmail.com, password:******}
                                     </p>
                                 </div>
                                 <div class="line-content"></div>
@@ -375,26 +397,42 @@
                                     <p>08:10:12</p>
                                 </div>
                             </div>
-                            <div class="d-flex mt-4 section-dislay-content">
-                                <div class="d-flex align-items-center justify-content-center gap-3" style="flex:1.5;">
-                                    <input type="checkbox" id="select-user">
-                                    <label for="">Nguyễn Văn A </label>
-                                </div>
-                                <div class="line-content"></div>
-                                <div class="d-flex align-items-center " style="flex: 2;justify-content: start;">
-                                    <p style="color: #919191;font-weight: 400;" class="ms-5">Màn hình chính </p>
-                                </div>
-                                <div class="line-content"></div>
-                                <div class="d-flex align-items-center" style="flex: 3;overflow: hidden;">
-                                    <p class="detail-content mx-5 ms-5">[{citizenName: Trần Minh A, ZaloId: 0934234...}]
-                                    </p>
-                                </div>
-                                <div class="line-content"></div>
-                                <div class="d-flex flex-column justify-content-center align-items-center"
-                                    style="flex:1.5;">
-                                    <p>21/04/2025</p>
-                                    <p>08:10:12</p>
-                                </div>
+                            <!-- modal log -->
+                            <div id="modalContainer">
+                                <form action="">
+                                    <div class="modal fade" id="processModal" tabindex="-1"
+                                        aria-labelledby="processModalLabel" data-bs-backdrop="false">
+                                        <div class="modal-dialog modal-dialog-centered modal-lg custom-modal">
+                                            <div class="modal-content">
+                                                <div class="modal-header">
+                                                    <h5 class="modal-title" style="color: #000000" id="processModalLabel">
+                                                        Log: <span></span>(0903234234)
+                                                    </h5>
+                                                    <div class="close-modal-btn">
+                                                        <a type="button" class="btn-close" data-bs-dismiss="modal"
+                                                            aria-label="Close"></a>
+                                                    </div>
+                                                </div>
+                                                <div class="modal-body">
+                                                    <div style="color: #1A1B23;font-size: 15px;" class="mb-3 d-flex align-items-center">
+                                                        <label for="citizenAddress" class="form-label me-2 mb-0"
+                                                            style="min-width: 70px">Tác vụ:</label>
+                                                        <p>SN 17 - Ngõ 111  đường Nguyễn Chí Thanh, phường Quang Trung</p>
+                                                    </div>
+                                                    <div>
+                                                        <label for="detail" class="form-label">Chi tiết:</label>
+                                                        <p class="ms-5" id="detail"></p>
+                                                    </div>
+                                                </div>
+                                                <div class="modal-footer custom-modal-footer">
+                                                    <div class="d-flex gap-4 ms-auto">
+                                                        <a class="custom-close-btn" data-bs-dismiss="modal">Đóng</a>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </form>
                             </div>
                         </div>
                         <div class="footer-content mx-3 ms-3 mt-auto mb-1 d-flex justify-content-center flex-lg-wrap">
@@ -458,6 +496,8 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://cdn.quilljs.com/1.3.6/quill.min.js"></script>
     <script src="../js/user-history.js"></script>
+    <script src="../js/modal.js"></script>
+    
 </body>
 
 </html>
