--- a/html/user-history.html
+++ b/html/user-history.html
@@ -7,7 +7,7 @@
     <title>Hệ thống đăng kí dịch vụ một cửa SOSR</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@400;500&display=swap" rel="stylesheet">
     <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/index.css" />
     <link rel="stylesheet" href="../css/responsive.css" />
@@ -405,7 +405,7 @@
                                         <div class="modal-dialog modal-dialog-centered modal-lg custom-modal">
                                             <div class="modal-content">
                                                 <div class="modal-header">
-                                                    <h5 class="modal-title" style="color: #000000" id="processModalLabel">
+                                                    <h5 class="modal-title" style="color: #000000;font-weight: 500;" id="processModalLabel">
                                                         Log: <span></span>(0903234234)
                                                     </h5>
                                                     <div class="close-modal-btn">
@@ -414,13 +414,13 @@
                                                     </div>
                                                 </div>
                                                 <div class="modal-body">
-                                                    <div style="color: #1A1B23;font-size: 15px;" class="mb-3 d-flex align-items-center">
+                                                    <div style="color: #1A1B23;font-size: 15px;font-weight: 500;" class="mb-3 d-flex align-items-center">
                                                         <label for="citizenAddress" class="form-label me-2 mb-0"
                                                             style="min-width: 70px">Tác vụ:</label>
                                                         <p>SN 17 - Ngõ 111  đường Nguyễn Chí Thanh, phường Quang Trung</p>
                                                     </div>
                                                     <div>
-                                                        <label for="detail" class="form-label">Chi tiết:</label>
+                                                        <label style="font-weight: 500;color: #1A1B23;" for="detail" class="form-label">Chi tiết:</label>
                                                         <p class="ms-5" id="detail"></p>
                                                     </div>
                                                 </div>
